# Compilation_Principles_Lab

experiment/Lab1/: benchmark.asm  caculate by RPN.cpp  compilerlab1  run.sh  test_input_1.txt  test_input_2.txt
experiment/Lab2/: CMakeLists.txt  LA_TEST.cpp  LA_TEST.txt  LexicalAnalyzer.cpp  LexicalAnalyzer.h  compilerlab2.cpp  latest requirements of lab2.md  词法分析示例.cpp
experiment/Lab3/: LA_TEST.cpp  compilerlab2.cpp  compilerlab3.cpp  e08.c  gdb调试技巧.md  run.sh  test_input_2.txt  常见运算符优先级.md
experiment/Lab3 handin/: CMakeLists.txt  LexicalAnalyzer.h
experiment/Lab3/test_output_asm/: 1.asm
experiment/Lab3/单元测试/: expression_length_test.cpp
experiment/Lab3/样例/: test_input_1.txt  test_input_3.txt  test_input_4.txt  test_input_5.txt  test_input_7.txt
experiment/Lab3/样例输出/: e08.ans
experiment/Lab3/测试/: README.md  e08.c  e09.c  e10.c
experiment/Lab3/测试输出/: e01  e01.s  e01_output.txt  e02  e02.s  e02_output.txt  e03  e04  e04.s  e05  e05.s  e06  e07  e07.s  e07_output.txt  e08  e08.s  e08_output.txt  e09  e09.s  e09_output.txt  e10  e10.s  e10_output.txt
experiment/Lab4/: LexicalAnalyzer.cpp  compilerlab4.cpp
experiment/Lab4 handin/: CMakeLists.txt  LexicalAnalyzer.cpp  LexicalAnalyzer.h  compilerlab4.cpp
experiment/Lab4/examples/: e01.s  e02.s  e03.s  e04.s  e05.s  e06.s  e07.s  e08.s  e09-plus.c  e09-plus.s  e09.c  e09.s  e10.c  e10.s
experiment/Lab4/examples-ans/: e09.ans  e10.ans
experiment/Lab4/样例/: e01.s
